# tg

./: .gitignore  Makefile.am  README.md  configure.ac  tgdata.py  version
packaging/: tg-timer.in.spec  tg-timer.wxs
packaging/debian/: changelog  control  copyright
src/: algo.c  audio.c  audio_interface.c  computer.c  config.c  filter_interface.c  interface.c  output_panel.c  python.c  serializer.c  tg.h  tppm.c
src/py/: filter_graph.py  spectrogram.py
